# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlalchemy-odbc4abap"
version = "0.0.1"
description = "Connect to S/4HANA CDS View Entities through ODBC."
readme = "README.md"
authors = [{ name = "Skye0402", email = "albrechg@yahoo.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["odbc", "sap", "sqlalchemy", "abap", "cds"]
dependencies = [
    "oauthlib >= 3.2.2",
    "requests-oauthlib >= 1.3.1",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/skye0402/saplangchain-proxy"

[project.scripts]
realpython = "reader.__main__:main"